--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -24,9 +24,9 @@
             <!--<a class="nav-item nav-link" th:href="@{/secure}">Secure</a>-->
             <!--<a class="nav-item nav-link" th:href="@{/newuser}">New User</a>-->
         </div>
-        <!--<div class="navbar-nav justify-content-end" >-->
-        <!--<a class="nav-item nav-link" href="/logout">Log out</a>-->
-        <!--</div>-->
+        <div class="navbar-nav justify-content-end" >
+        <a class="nav-item nav-link" href="/logout">Log out</a>
+        </div>
         <!--</div>-->
         <!--</nav>-->
     </nav>
