--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,19 +8,20 @@
 <body>
 <th:block th:replace="base :: SecurityNav"></th:block>
 <h2>It worked!</h2>
-<div sec:authorize="isAuthenticated()">
-    This content is only shown to authenticated users.
-</div>
-<div sec:authorize="hasAuthority('ADMIN')">
-    This content is only shown to administrators.
-</div>
-<div sec:authorize="hasAuthority('USER')">
-    This content is only shown to users.
-</div>
+<div class="container custom">
+    <div sec:authorize="isAuthenticated()">
+        This content is only shown to authenticated users.
+    </div>
+    <div sec:authorize="hasAuthority('ADMIN')">
+        This content is only shown to administrators.
+    </div>
+    <div sec:authorize="hasAuthority('USER')">
+        This content is only shown to users.
+    </div>
 
-Logged user: <span sec:authentication="name"> The user is not logged in yet</span>
-<!--Roles: <span sec:authentication="principal.authorities">Principal Authorities not set</span>-->
-
+    Logged user: <span sec:authentication="name"> The user is not logged in yet</span>
+    <!--Roles: <span sec:authentication="principal.authorities">Principal Authorities not set</span>-->
+</div>
 <th:block th:replace="base :: SecurityJS"></th:block>
 </body>
 </html>
