--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <th:block th:replace="base :: SecurityNav"></th:block>
-<div class="container">
-    <div class="col">
-        <div class="row">
+<!--<div class="container">-->
+    <!--<div class="row content-justify-center">-->
+        <!--<div class="col col-sm-4">-->
             <div class="login">
                 <h1>Login</h1>
                 <div th:if="${param.error}">
@@ -21,12 +21,12 @@
                 <form th:action="@{/login}" method="post">
                     <div><label> User Name : <input type="text" name="username"/> </label></div>
                     <div><label> Password: <input type="password" name="password"/> </label></div>
-                    <button type="submit" class="btn btn-primary btn-block btn-large">Let me in.</button>
+                    <button type="submit" class="btn btn-primary btn-block btn-large">Login</button>
                 </form>
             </div>
-        </div>
-    </div>
-</div>
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 <th:block th:replace="base :: SecurityJS"></th:block>
 </body>
 </html>
